--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/react": "^5.5.0",
     "@tailwindcss/vite": "^4.0.7",
+    "bootstrap": "^5.3.3",
     "codemirror": "^6.0.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.7"
   },
