--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@coreui/coreui": "^5.2.0",
     "@coreui/react": "^5.5.0",
     "@tailwindcss/vite": "^4.0.7",
+    "@uiw/react-textarea-code-editor": "^3.1.0",
     "bootstrap": "^5.3.3",
     "codemirror": "^6.0.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
