--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.5.2",
     "tailwindcss": "^4.0.7"
   },
