--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@codemirror/lang-javascript": "^6.2.3",
     "@coreui/coreui": "^5.2.0",
     "@coreui/react": "^5.5.0",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "codemirror": "^6.0.1",
     "framer-motion": "^12.4.7",
+    "github-markdown-css": "^5.8.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -26,6 +28,7 @@
     "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.0.7"
   },
@@ -33,6 +36,7 @@
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
