--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.24.1",
     "@codemirror/lang-javascript": "^6.2.3",
     "@coreui/coreui": "^5.2.0",
     "@coreui/react": "^5.5.0",
