--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=http://localhost:3000/api/v1/chat
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_Y29taWMtcm91Z2h5LTk5LmNsZXJrLmFjY291bnRzLmRldiQ
