--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@prisma/client": "^6.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.11.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pg": "^8.13.3",
+    "prisma": "^6.4.1"
   }
 }
