--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "cross-env  NODE_ENV=production nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@google/generative-ai": "^0.22.0",
     "@prisma/client": "^6.4.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -23,5 +25,8 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "prisma": "^6.4.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
